--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,6 @@
             ],
             "styles": [
               "src/styles.scss"
-              
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -97,6 +96,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
             "scripts": []
